feat: update domain references and fix social sharing metadata
- Replace all 'jjw-portfolio' references with 'justinwessels'
- Update all domain URLs from justinwessels.vercel.app to justinwessels.com
- Add comprehensive Open Graph and Twitter Card metadata
- Create dynamic OG image generator at /og route
- Fix navigation hydration mismatch with proper client-side mounting
- Add metadataBase to resolve social sharing image URLs
- Update navigation to include all routes (labs, ventures, feeds)
- Update configuration files (vercel.json, next-sitemap.config.js, etc.)
- Fix structured data and RSS feed URLs

--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 # Site Configuration
-SITE_URL=https://justinwessels.vercel.app
+SITE_URL=https://justinwessels.com
 
 # Revalidation (for auto-updates)
 REVALIDATE_TOKEN=your-secure-random-token-here
